--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon --exec ts-node src/infra/web/api/express/server.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.7",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
     "reflect-metadata": "^0.1.14",
     "sequelize": "^6.35.1",
     "sequelize-typescript": "^2.1.6",
