--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@swc/core": "^1.3.100",
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.10",
+    "@types/jstoxml": "^2.0.4",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
@@ -21,6 +22,7 @@
     "@types/uuid": "^9.0.7",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jstoxml": "^5.0.1",
     "nodemon": "^3.0.3",
     "reflect-metadata": "^0.1.14",
     "sequelize": "^6.35.1",
